Fixed style issues on mobile and small screen sizes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,28 @@
+@media (max-width : 530px) {
+.topics .view-button-score {display: block;}
+
+
+}
+@media (max-width : 530px) {
+.topics .view-button-score {display: block;}
+
+
+}
+@media (max-width : 30px) {
+.topics .view-button-score {display: block;}
+
+}
 
 .topics .list-group {
 	width: 60%;
 	margin-left: 20%;
+}
+
+.topic-background{
+	border-color: red;
+	border-width: 5px;
+	border-radius: 10px;
+	border-style: 20px;
 }
 
 .topics h2{
@@ -10,29 +31,68 @@
 
 .topics .list-group button{
 	margin-bottom: 20px;
+
 }
 
-.topics .list-group a{
-	height: 150px;
+.topics .list-group .list-group-item-action{
+	height: 30%;
+	overflow: auto;
+
 }
 
-.topics .comments-button .btn{
-	position: absolute;
-	top: 70%;
-	right: 3%;
+.topics .view-button .btn-default{
+	padding:6px 24px;
 }
 
-.vote-no-button {
+.topics .agree-button .btn-default {
+	-moz-box-shadow:inset 0px 1px 0px 0px #3dc21b;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #3dc21b;
+	box-shadow:inset 0px 1px 0px 0px #3dc21b;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #47d16c), color-stop(1, #5cbf2a));
+	background:-moz-linear-gradient(top, #47d16c 5%, #5cbf2a 100%);
+	background:-webkit-linear-gradient(top, #47d16c 5%, #5cbf2a 100%);
+	background:-o-linear-gradient(top, #47d16c 5%, #5cbf2a 100%);
+	background:-ms-linear-gradient(top, #47d16c 5%, #5cbf2a 100%);
+	background:linear-gradient(to bottom, #47d16c 5%, #5cbf2a 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#47d16c', endColorstr='#5cbf2a',GradientType=0);
+	background-color:#47d16c;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+
+
+.topics .agree-button .btn-default:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5cbf2a), color-stop(1, #47d16c));
+	background:-moz-linear-gradient(top, #5cbf2a 5%, #47d16c 100%);
+	background:-webkit-linear-gradient(top, #5cbf2a 5%, #47d16c 100%);
+	background:-o-linear-gradient(top, #5cbf2a 5%, #47d16c 100%);
+	background:-ms-linear-gradient(top, #5cbf2a 5%, #47d16c 100%);
+	background:linear-gradient(to bottom, #5cbf2a 5%, #47d16c 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5cbf2a', endColorstr='#47d16c',GradientType=0);
+	background-color:#5cbf2a;
+}
+
+.topics .disagree-button .btn-default {
 	-moz-box-shadow:inset 0px 1px 0px 0px #cf866c;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #cf866c;
 	box-shadow:inset 0px 1px 0px 0px #cf866c;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d0451b), color-stop(1, #bc3315));
-	background:-moz-linear-gradient(top, #d0451b 5%, #bc3315 100%);
-	background:-webkit-linear-gradient(top, #d0451b 5%, #bc3315 100%);
-	background:-o-linear-gradient(top, #d0451b 5%, #bc3315 100%);
-	background:-ms-linear-gradient(top, #d0451b 5%, #bc3315 100%);
-	background:linear-gradient(to bottom, #d0451b 5%, #bc3315 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d0451b', endColorstr='#bc3315',GradientType=0);
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d0451b), color-stop(1, #ff2b00));
+	background:-moz-linear-gradient(top, #d0451b 5%, #ff2b00 100%);
+	background:-webkit-linear-gradient(top, #d0451b 5%, #ff2b00 100%);
+	background:-o-linear-gradient(top, #d0451b 5%, #ff2b00 100%);
+	background:-ms-linear-gradient(top, #d0451b 5%, #ff2b00 100%);
+	background:linear-gradient(to bottom, #d0451b 5%, #ff2b00 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#d0451b', endColorstr='#ff2b00',GradientType=0);
 	background-color:#d0451b;
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
@@ -43,61 +103,22 @@
 	color:#ffffff;
 	font-family:Arial;
 	font-size:13px;
-	font-weight: bold;
-	padding:6px 8px;
+	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #854629;
-	height: 30px !important;
-	position: relative;
-	margin: 0px !important;
-	margin-bottom: 40px !important;
 
 }
-.vote-no-button:hover {
-	text-decoration: none;
-	color: white;
-}
 
-
-.vote-yes-button {
-	-moz-box-shadow:inset 0px 1px 0px 0px #3dc21b;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #3dc21b;
-	box-shadow:inset 0px 1px 0px 0px #3dc21b;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #44c767), color-stop(1, #5cbf2a));
-	background:-moz-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-	background:-webkit-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-	background:-o-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-	background:-ms-linear-gradient(top, #44c767 5%, #5cbf2a 100%);
-	background:linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#44c767', endColorstr='#5cbf2a',GradientType=0);
-	background-color:#44c767;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-	border-radius:3px;
-	border:1px solid #18ab29;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:13px;
-	font-weight:bold;
-	padding:6px 8px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
-	height: 30px !important;
-	position: relative;
+.topics .disagree-button .btn-default:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ff2b00), color-stop(1, #d0451b));
+	background:-moz-linear-gradient(top, #ff2b00 5%, #d0451b 100%);
+	background:-webkit-linear-gradient(top, #ff2b00 5%, #d0451b 100%);
+	background:-o-linear-gradient(top, #ff2b00 5%, #d0451b 100%);
+	background:-ms-linear-gradient(top, #ff2b00 5%, #d0451b 100%);
+	background:linear-gradient(to bottom, #ff2b00 5%, #d0451b 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2b00', endColorstr='#d0451b',GradientType=0);
+	background-color:#ff2b00;
 }
-.vote-yes-button:hover {
-	text-decoration: none;
-	color: white;
-
-}
-.vote-yes-button:active {
-	position:relative;
-	top:1px;
-	text-decoration: none;
-}
-
 
 .topic-category {
 	font-style: italic;
@@ -111,11 +132,28 @@
 
 .btn btn-success {
 	background-color: blue !important;
+	top: -20px;
 }
 
-.topics .score{
+ .view-button-score .score-pos{
+	font-size: 20px;
+	color: #47d16c;
 	position: absolute;
-	top: 83%;
+	margin-top: 5px;
+	margin-left: 5px;
+}
+ .view-button-score .score-neu{
+	font-size: 20px;
+	position: absolute;
+	margin-top: 5px;
+	margin-left: 5px;
+}
+ .view-button-score .score-neg{
+	font-size: 20px;
+	color: #d0451b;
+	position: absolute;
+	margin-top: 5px;
+	margin-left: 5px;
 }
 
 .nav-buttons button{
